2023-05-20  Jay Berkenbilt  <ejb@ql.org>

        * From M. Holger: add QPDF::newReserved as a better alternative to
        QPDFObjectHandle::newReserved. The operation of creating a new
        reserved object fits better in the QPDF API. The old call just
        delegates to the new one.

2023-04-02  Jay Berkenbilt  <ejb@ql.org>
        * Allow QPDFJob's workflow to be split into a reading phase and a
        writing phase to allow the caller to operate on the QPDF object
        before it is written. This adds methods QPDFJob::createQPDF and
        QPDFJob::writeQPDF and corresponding C API functions
        qpdfjob_create_qpdf and qpdfjob_write_qpdf. Thanks to M. Holger
        for the contrbution.

2023-03-18  Jay Berkenbilt  <ejb@ql.org>

        * Enhance --optimize-images to support images nested inside of
        form XObjects. Thanks to Connor Osborne (github user cdosborn) for
        the contribution. Fixes #923.

2023-02-25  Jay Berkenbilt  <ejb@ql.org>

        * 11.3.0: release

        * When performing overlay or underlay operations, convert the
        original page to a form XObject instead of simply isolating its
        contents with q/Q operators. This prevents unbalanced q/Q
        operators in any of the original pages from messing up the
        graphics state of anything that is overlaid on top of it. Fixes
        #904.

2023-02-18  Jay Berkenbilt  <ejb@ql.org>

        * Treat all linearization errors and warnings as warnings, and
        issue them through the normal warning system using the new error
        code qpdf_e_linearization. That means that --no-warn will suppress
        them, and the file name is included in the warning. Fixes #851.

2023-01-28  Jay Berkenbilt  <ejb@ql.org>

        * New option --remove-restrictions removes security restrictions
        from digitally signed files. Fixes #833.

2023-01-09  Jay Berkenbilt  <ejb@ql.org>

        * Bug fix: flatten annotations should handle a page with no